force-app/main/default/objects/RNWL_Communications__mdt/RNWL_Communications__mdt.object-meta.xml
<CustomObject>
    <label>RNWL Communications</label>
    <pluralLabel>RNWL Communications</pluralLabel>
</CustomObject>