force-app/main/default/objects/RNWL_Communications__mdt/fields/Frequency_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Frequency_per_Day__c</fullName>
    <label>Frequency per Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>