force-app/main/default/objects/RNWL_Communications__mdt/fields/Metadata_Name__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Name__c</fullName>
    <label>Metadata Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>