force-app/main/default/objects/RNWL_Communications__mdt/fields/SMS__c.field-meta.xml
<CustomField>
    <fullName>SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS</label>
    <type>Checkbox</type>
</CustomField>