force-app/main/default/objects/RNWL_Communications__mdt/fields/User_Friendly_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Friendly_Name__c</fullName>
    <label>User Friendly Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>