force-app/main/default/objects/RNWL_Communications__mdt/fields/WhatsApp__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WhatsApp</label>
    <type>Checkbox</type>
</CustomField>